--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">Login-Signup</string>
+    <string name="space">SPACE</string>
+    <string name="for_early_childhood_education">For Early Childhood Education</string>
+    <string name="login">Login</string>
 </resources>
