Email authentication using firebase

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,5 @@
     <string name="login">Login</string>
     <string name="hide_password">Hide password</string>
     <string name="show_password">Show password</string>
+    <string name="signup">Sign up</string>
 </resources>
