--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,6 @@
     <string name="hide_password">Hide password</string>
     <string name="show_password">Show password</string>
     <string name="signup">Sign up</string>
+
+    <string name="web_client_id">382793018145-mbemufnolttr93p07vv9dpm16inqia8j.apps.googleusercontent.com</string>
 </resources>
